--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,6 +21,8 @@
                     <tr>
                         <th scope="col">Short URL ID</th>
                         <th scope="col">Long URL</th>
+                        <th scope="col">Delete</th>
+
                     </tr>
                 </thead>
                 <tbody>
@@ -32,6 +34,10 @@
                             <td>
                                 <%= urls[id] %>
                             </td>
+                            <td>
+                                <form method="POST" action="/urls/<%= id %>/delete">
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                </form>
                         </tr>
                         <% } %>
                 </tbody>
