--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,9 +22,17 @@
                         <%= id %>
                     </a>
                 </p>
+                <form method="POST" action="/urls/<%= id %>">
+                    <div class="form-group">
+                        <label for="longURL">Long URL:</label>
+                        <input type="text" class="form-control" id="longURL" name="longURL" value="<%= longURL %>">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                </form>
             </div>
             <div class="card-footer text-muted"></div>
         </div>
+
         <!-- Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
