--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,11 @@
                 <a class="nav-item nav-link" href="/urls">My URLs</a>
                 <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             </div>
+            <form method="POST" action="/login">
+                <input type="text" name="username">
+                <button type="submit">Login</button>
+            </form>
+
         </div>
     </nav>
 </header>
