--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,11 +11,20 @@
                 <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             </div>
 
-            <form method="POST" action="/login">
-                <input type="text" name="username">
-                <button type="submit">Login</button>
-            </form>
-
+            <% if (username) { %>
+                <div class="navbar-nav ml-auto">
+                    <span class="navbar-text">Logged in as <%= username %></span>
+                    <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Log Out</button>
+                    </form>
+                </div>
+                <% } else { %>
+                    <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username"
+                            aria-label="Username">
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Log In</button>
+                    </form>
+                    <% } %>
 
         </div>
     </nav>
