--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,17 +11,19 @@
                 <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             </div>
 
-            <% if (username) { %>
+            <% if (user) { %>
                 <div class="navbar-nav ml-auto">
-                    <span class="navbar-text">Logged in as <%= username %></span>
+                    <span class="navbar-text">Logged in as <%= user.email %></span>
                     <form method="POST" action="/logout" class="form-inline my-2 my-lg-0">
                         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Log Out</button>
                     </form>
                 </div>
                 <% } else { %>
                     <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username"
-                            aria-label="Username">
+                        <input class="form-control mr-sm-2" type="text" name="email" placeholder="Email"
+                            aria-label="Email">
+                        <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password"
+                            aria-label="Password">
                         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Log In</button>
                     </form>
                     <% } %>
