--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,16 +7,14 @@
 </head>
 
 <body>
-    <h2>Login</h2>
-    <form method="POST" action="/login">
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" name="email" required>
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" name="password" required>
-        </div>
+    <h1>Login</h1>
+    <form action="/login" method="POST">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <br><br>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+        <br><br>
         <button type="submit">Login</button>
     </form>
 </body>
