--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,18 +11,24 @@
                 <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             </div>
 
-            <% if (!user) { %>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
+            <% if (!username) { %>
+                <form class="form-inline my-2 my-lg-0" method="POST" action="/login">
+                    <input class="form-control mr-sm-2" type="email" placeholder="Email" name="email">
+                    <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password">
+                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Login</button>
+                </form>
+                <a href="/register" class="btn btn-outline-light my-2 my-sm-0 ml-3">Register</a>
                 <% } else { %>
-                    <li>
-                        Logged in as <strong>
-                            <%= user.email %>
-                        </strong>
-                        <form method="POST" action="/logout" style="display: inline-block;">
-                            <button type="submit">Logout</button>
+                    <div class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <%= username %>
+                            </a>
+                        </li>
+                        <form class="form-inline my-2 my-lg-0" method="POST" action="/logout">
+                            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
                         </form>
-                    </li>
+                    </div>
                     <% } %>
 
         </div>
