--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,7 +22,7 @@
                         <th scope="col">Short URL ID</th>
                         <th scope="col">Long URL</th>
                         <th scope="col">Delete</th>
-
+                        <th scope="col">Edit</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -38,6 +38,10 @@
                                 <form method="POST" action="/urls/<%= id %>/delete">
                                     <button type="submit" class="btn btn-danger">Delete</button>
                                 </form>
+                            </td>
+                            <td>
+                                <a href="/urls/<%= id %>" class="btn btn-primary">Edit</a>
+                            </td>
                         </tr>
                         <% } %>
                 </tbody>
