--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,7 @@
                 <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             </div>
 
-            <% if (!username) { %>
+            <% if (!user) { %>
                 <form class="form-inline my-2 my-lg-0" method="POST" action="/login">
                     <input class="form-control mr-sm-2" type="email" placeholder="Email" name="email">
                     <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password">
@@ -22,12 +22,13 @@
                     <div class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <%= username %>
+                                <%= user.username %>
                             </a>
                         </li>
                         <form class="form-inline my-2 my-lg-0" method="POST" action="/logout">
                             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
                         </form>
+
                     </div>
                     <% } %>
 
