--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Login Form</title>
 </head>
 
 <body>
     <h1>Login</h1>
     <form action="/login" method="POST">
-        <label for="email">Email</label>
+        <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <br><br>
-        <label for="password">Password</label>
+        <br>
+        <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
-        <br><br>
-        <button type="submit">Login</button>
+        <br>
+        <input type="submit" value="Login">
     </form>
 </body>
 
